--- a/public/index.html
+++ b/public/index.html
@@ -537,7 +537,7 @@
         </div>
     </div>
     <script>
-        // تعريف أزرار التبديل ومحتواها
+    // تعريف أزرار التبديل ومحتواها
         const toggles = [
             { toggle: 'toggleApartments', content: 'apartmentsInfo' },
             { toggle: 'toggleBasement', content: 'basementInfo' },
@@ -556,6 +556,8 @@
                     contentDiv.classList.toggle('hidden');
                     toggleBtn.querySelector('.toggle-icon span').textContent = contentDiv.classList.contains('hidden') ? 'add' : 'remove';
                 });
+            } else {
+                console.warn(`تحذير: العنصر ${toggle} أو ${content} غير موجود`);
             }
         });
 
@@ -567,6 +569,8 @@
                 select.addEventListener('change', () => {
                     content.classList.toggle('hidden', select.value !== triggerValue);
                 });
+            } else {
+                console.warn(`تحذير: العنصر ${selectId} أو ${contentId} غير موجود`);
             }
         };
         toggleSelect('facadeType', 'customFacadeInfo', 'custom');
@@ -587,13 +591,17 @@
         document.getElementById('buildingForm').addEventListener('submit', async (e) => {
             e.preventDefault();
             console.log('بدء معالجة إرسال النموذج');
+            
             const submitBtn = e.target.querySelector('button[type="submit"]');
+            if (!submitBtn) {
+                console.error('خطأ: زر الإرسال غير موجود');
+                return;
+            }
             submitBtn.innerHTML = '<span class="material-icons-outlined">hourglass_top</span> جارٍ الحساب...';
             submitBtn.disabled = true;
+
             const resultContainer = document.getElementById('resultContainer');
             const resultContent = document.getElementById('resultContent');
-
-            // التحقق من وجود العناصر في DOM
             if (!resultContainer || !resultContent) {
                 console.error('خطأ: عنصر resultContainer أو resultContent غير موجود في DOM');
                 submitBtn.innerHTML = '<span class="material-icons-outlined">calculate</span> حساب التكلفة';
@@ -613,6 +621,7 @@
             };
 
             try {
+                console.log('جمع البيانات من النموذج');
                 // جمع البيانات من النموذج
                 const inputs = {
                     customer: {
@@ -724,10 +733,10 @@
                     inputs.technicalDetails.concreteVolume = getValue('concreteVolume', true);
                 }
 
-                // تسجيل البيانات المُرسلة
                 console.log('البيانات المُرسلة إلى /api/process:', JSON.stringify(inputs, null, 2));
 
                 // إرسال البيانات إلى الـ API
+                console.log('إرسال الطلب إلى /api/process');
                 const response = await fetch('/api/process', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
@@ -737,13 +746,24 @@
                 console.log('حالة الاستجابة:', response.status, response.statusText);
 
                 if (!response.ok) {
+                    const errorText = await response.text();
+                    console.error('نص خطأ الاستجابة:', errorText);
                     throw new Error(`خطأ في الاتصال: ${response.status} ${response.statusText}`);
                 }
 
-                const result = await response.json();
-                console.log('الاستجابة من /api/process:', JSON.stringify(result, null, 2));
+                let result;
+                try {
+                    result = await response.json();
+                    console.log('الاستجابة من /api/process:', JSON.stringify(result, null, 2));
+                } catch (jsonError) {
+                    console.error('خطأ في تحليل JSON:', jsonError);
+                    throw new Error('فشل في تحليل استجابة الخادم');
+                }
 
                 // التحقق من نجاح الاستجابة
+                if (!result || typeof result !== 'object') {
+                    throw new Error('استجابة غير صالحة من الخادم');
+                }
                 if (!result.success || !result.result || !result.result.success || !result.result.pdfData) {
                     throw new Error(result.result?.message || 'فشل معالجة البيانات أو pdfData غير موجود');
                 }
@@ -753,18 +773,15 @@
                     <div class="result-section">
                         <h3><span class="material-icons-outlined">check_circle</span> تم الحساب بنجاح</h3>
                         <p>اضغط على الزر أدناه لتحميل ملف PDF</p>
+                        <button id="downloadPdf" class="btn btn-primary">تحميل PDF</button>
                     </div>
                 `;
                 resultContainer.classList.remove('hidden');
-                console.log('تم عرض رسالة النجاح في resultContainer');
-
-                // إزالة أي معالجات سابقة لزر تحميل PDF
-                const downloadBtn = document.getElementById('downloadPdf');
-                const newDownloadBtn = downloadBtn.cloneNode(true);
-                downloadBtn.parentNode.replaceChild(newDownloadBtn, downloadBtn);
+                console.log('تم عرض رسالة النجاح وزِر تحميل PDF');
 
                 // إنشاء ملف PDF عند الضغط على زر التحميل
-                newDownloadBtn.addEventListener('click', () => {
+                const downloadBtn = document.getElementById('downloadPdf');
+                downloadBtn.addEventListener('click', () => {
                     try {
                         console.log('بدء إنشاء ملف PDF');
                         if (!window.jspdf || !window.jspdf.jsPDF) {
@@ -773,17 +790,17 @@
                         const { jsPDF } = window.jspdf;
                         const doc = new jsPDF({ orientation: 'portrait', unit: 'mm', format: 'a4' });
 
-                        // استخدام خط افتراضي (Helvetica) لتجنب مشاكل تحميل الخط
+                        // استخدام خط افتراضي
                         doc.setFont('Helvetica', 'normal');
                         doc.setFontSize(12);
                         doc.setTextColor(40, 40, 40);
 
                         const pdfData = result.result.pdfData;
                         let yOffset = 10;
-                        const pageHeight = 270; // ارتفاع الصفحة (A4 ≈ 297mm، نترك هامش)
+                        const pageHeight = 270;
                         const lineHeight = 7;
 
-                        // دالة لإضافة صفحة جديدة إذا لزم الأمر
+                        // دالة لإضافة صفحة جديدة
                         const addNewPageIfNeeded = () => {
                             if (yOffset > pageHeight) {
                                 doc.addPage();
@@ -795,7 +812,7 @@
                         doc.text('تقرير تكاليف البناء', 105, yOffset, { align: 'center' });
                         yOffset += 10;
 
-                        // 1. معلومات الشركة (صفحة جديدة)
+                        // 1. معلومات الشركة
                         doc.addPage();
                         yOffset = 10;
                         doc.text('معلومات الشركة', 200, yOffset, { align: 'right' });
@@ -806,7 +823,7 @@
                             addNewPageIfNeeded();
                         });
 
-                        // 2. بيانات المدخلات (صفحة جديدة)
+                        // 2. بيانات المدخلات
                         doc.addPage();
                         yOffset = 10;
 
@@ -849,7 +866,7 @@
                             addNewPageIfNeeded();
                         });
 
-                        // 3. الكميات (صفحة جديدة، قد تحتاج صفحتين)
+                        // 3. الكميات
                         doc.addPage();
                         yOffset = 10;
                         doc.text('الكميات', 200, yOffset, { align: 'right' });
@@ -866,7 +883,7 @@
                             addNewPageIfNeeded();
                         });
 
-                        // 4. الحسابات الإنشائية (صفحة جديدة، قد تحتاج صفحتين)
+                        // 4. الحسابات الإنشائية
                         doc.addPage();
                         yOffset = 10;
                         doc.text('الحسابات الإنشائية', 200, yOffset, { align: 'right' });
@@ -883,7 +900,7 @@
                             addNewPageIfNeeded();
                         });
 
-                        // 5. التكاليف (صفحة جديدة)
+                        // 5. التكاليف
                         doc.addPage();
                         yOffset = 10;
                         doc.text('التكاليف', 200, yOffset, { align: 'right' });
@@ -897,7 +914,7 @@
                         yOffset += lineHeight;
                         addNewPageIfNeeded();
 
-                        // 6. أسعار المواد (صفحة جديدة)
+                        // 6. أسعار المواد
                         doc.addPage();
                         yOffset = 10;
                         doc.text('أسعار المواد', 200, yOffset, { align: 'right' });
@@ -919,7 +936,7 @@
 
             } catch (error) {
                 console.error('خطأ أثناء معالجة النموذج:', error);
-                resultContent.innerHTML = `<p style="color: #C75656;">خطأ: ${error.message}</p>`;
+                resultContent.innerHTML = `<p style="color: #C75656;">خطأ: ${error.message || 'حدث خطأ غير متوقع'}</p>`;
                 resultContainer.classList.remove('hidden');
             } finally {
                 submitBtn.innerHTML = '<span class="material-icons-outlined">calculate</span> حساب التكلفة';
